# openrox

./: CMakeLists.txt  LICENSE.COMMERCIAL  README.md
cmake/: dependencies.cmake  examples.cmake  macros.cmake  openrox.cmake  openrox_lib.cmake  parameters.cmake  tests.cmake  use_openrox.cmake
cmake/CMakeModules/: FindMKL.cmake  FindOpenRox.cmake
cmake/compiler/: compiler.cmake  compiler_clang.cmake  compiler_gnucc.cmake  compiler_msvc10_2010.cmake  compiler_msvc11_2012.cmake  compiler_msvc12_2013.cmake  compiler_msvc14_2015.cmake  compiler_msvc16_2019.cmake
cmake/install/: api_robox.cmake  install.cmake  install_android.cmake  install_desktop.cmake  install_ios.cmake
cmake/layers/: baseproc_layer.cmake  core_layer.cmake  extern_layer.cmake  io_layer.cmake  system_layer.cmake  user_layer.cmake
cmake/layers/templates/: array2d_templates.cmake  dllist_templates.cmake  dynvec_templates.cmake  objset_templates.cmake
cmake/manual/: prog.cmake  user.cmake
cmake/platform/: platform.cmake  platform_android.cmake  platform_ios.cmake  platform_linux.cmake  platform_mac.cmake  platform_pikeos.cmake  platform_windows.cmake  platform_windowsstore.cmake
cmake/toolchains/: android_toolchain.cmake  ios_toolchain.cmake  odroid_toolchain.cmake  pikeosppc_toolchain.cmake  uwp_toolchain.cmake
examples/: rox_example_cam2proj.c  rox_example_camera_calibration.c  rox_example_camera_projector_calibration.c  rox_example_camera_projector_calibration_mocked.c  rox_example_camreader.cpp  rox_example_create_virtual_sequence.cpp  rox_example_database_generation.c  rox_example_detection_server.c  rox_example_identification.c  rox_example_identification_database_cloud.c  rox_example_identification_database_compiled.c  rox_example_image_score.c  rox_example_image_undistortion.c  rox_example_mbo_odometry_cylinders_nodependency.c  rox_example_mbo_odometry_ellipses_nodependency.c  rox_example_mbo_odometry_nodependency.c  rox_example_mbo_odometry_segments_nodependency.c  rox_example_motion_detection.c  rox_example_odometry_database_compiled.c  rox_example_odometry_database_features.c  rox_example_odometry_inertial_observer.c  rox_example_odometry_multi_plane.c  rox_example_odometry_single_plane.c  rox_example_odometry_single_plane_database.c  rox_example_odometry_single_plane_filter_matse3.c  rox_example_odometry_single_plane_photoframe.c  rox_example_plane_detection_from_rectangles.c  rox_example_prediction_matso3.c  rox_example_projector_calibration.c  rox_example_rectangle_detection.c  rox_example_se3_so3z_so3z_init_and_vvs.c  rox_example_tracking.c  rox_example_tracking_photoframe.c  rox_example_vvs_se3_so3z.c  rox_example_vvs_se3_so3z_so3z.c
manual/prog/: Doxyfile_openrox.in
manual/user/: make_user_manual_openrox.sh  openrox_user_manual.tex
manual/user/detection/: detection.tex  detection_params.tex
manual/user/intro/: install.tex  intro.tex  intro_tracking.tex
manual/user/maths/: geometry.tex  linalg.tex  maths.tex  matrix.tex  matse3.tex  matsl3.tex
manual/user/model/: model.tex  model_2d.tex  model_3d.tex
manual/user/odometry/: fusion_visual_inertial.tex  odometry.tex  odometry_m2d.tex  odometry_m2d_params.tex  odometry_m3d.tex
manual/user/sensor/: calibration.tex  camera.tex  inertia.tex  sensor.tex
manual/user/tracking/: tracking.tex  tracking_params.tex
manual/user/utils/: error.tex  license.tex  timer.tex  types.tex  utils.tex
manual/user/vision/: ident.tex  ident_database.tex  ident_offline.tex  ident_photoframe.tex  ident_texture.tex  idisp.tex  image.tex  image_files.tex  imask.tex  vision.tex
release/common/: readme_license.txt  readme_res.txt  readme_seq_inertial.txt  readme_seq_photoframe.txt
release/common/minimal_seq/: sequences.txt
release/desktop/openrox/cmake/: CMakeLists.txt
sources/api/: openrox.h
sources/baseproc/calculus/: calculus.h
sources/baseproc/geometry/: coordinate_systems.h  euclidean.h  projective.h
sources/baseproc/image/: image.c  image.h  image_rgba.c  image_rgba.h
sources/baseproc/maths/: maths_macros.h
sources/core/bundle/: bundle.c  bundle.h  bundle_camera.c  bundle_camera.h  bundle_frame.c  bundle_frame.h  bundle_frame_struct.h  bundle_measure.c  bundle_measure.h  bundle_point.c  bundle_point.h  bundle_point_struct.h  bundle_struct.h
sources/core/detection/: detection_checkerboard.c  detection_checkerboard.h  detection_checkerboard_struct.h  detection_sl3.c  detection_sl3.h  detection_sl3_struct.h
sources/core/identification/: codedframe.c  codedframe.h  dbident_se3.c  dbident_se3.h  dbident_se3_struct.h  dbident_sl3.c  dbident_sl3.h  multiident.c  multiident.h  multiident_struct.h  photoframe.c  photoframe.h  photoframe_struct.h  templateident.c  templateident.h  templateident_se3.c  templateident_se3.h  templateident_se3_struct.h  templateident_sl3.c  templateident_sl3.h  templateident_sl3_struct.h  templateident_struct.h
sources/core/matching/: matching_3d2d.c  matching_3d2d.h
tests/: openrox_tests.cpp  openrox_tests.hpp
(+1721 files in other folders)
